# bevy-cool-shapes

./: Cargo.toml  Readme.md
bevy_cool_debug_shapes/: Cargo.toml  Readme.md
bevy_cool_debug_shapes/examples/: wireframe_demo.rs
bevy_cool_debug_shapes/src/: lib.rs  render.rs
bevy_cool_shapes/: Cargo.toml  Readme.md
bevy_cool_shapes/src/: lib.rs
bevy_cool_shapes_render/: Cargo.toml  Readme.md
bevy_cool_shapes_render/examples/: minimal.rs  wireframe_demo.rs
bevy_cool_shapes_render/src/: bundles.rs  lib.rs  outline.rs  render.rs
docs/: todo.txt
examples/: wireframe_demo.rs
src/: bundles.rs  lib.rs  render.rs  shapes.rs
